--- a/front/src/index.css
+++ b/front/src/index.css
@@ -90,6 +90,7 @@ video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	font-family: 'Roboto';
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -132,4 +133,7 @@ q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+a{
+	text-decoration: none;
 }
