--- a/front/src/pages/biblioteca/main.scss
+++ b/front/src/pages/biblioteca/main.scss
@@ -48,14 +48,15 @@
             select {
                 width: 90%;
                 padding: 8px 4px;
-
+                border-radius: 8px;
+                font-weight: 700;
                 @media(min-width: 1024px){
                     width: 100%;
                 }
             }
 
             @media(min-width: 1024px){
-                width: 15%;
+                width: 25%;
             }
         }
 
